# Earnings-Call-Analyzer

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml  start.sh
backend/: pyproject.toml  requirements.txt
backend/src/: config.py
backend/src/analysis/: sentiment.py  temporal.py
backend/src/api/: main.py  schemas.py
backend/src/api/routes/: companies.py  health.py  query.py
backend/src/chunking/: chunker.py
backend/src/database/: connection.py  models.py
backend/src/embedding/: embedder.py
backend/src/generation/: generator.py  prompts.py
backend/src/ingestion/: edgar_client.py  pipeline.py  transcript_parser.py
backend/src/retrieval/: retriever.py
data/sample_transcripts/: aapl_transcripts.json  acn_transcripts.json  amzn_transcripts.json  crm_transcripts.json  googl_transcripts.json  gs_transcripts.json  ibm_transcripts.json  jpm_transcripts.json  meta_transcripts.json  msft_transcripts.json  nvda_transcripts.json  orcl_transcripts.json  ry_transcripts.json  tsla_transcripts.json  unh_transcripts.json  v_transcripts.json  wmt_transcripts.json  xom_transcripts.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: CompanySearch.jsx  Logo.jsx  ResultsPanel.jsx  SentimentChart.jsx
frontend/src/hooks/: useVoiceInput.js
scripts/: generate_rbc_data.py  generate_seed_data.py  setup_db.py
