[tool.poetry]
name = "earnings-call-analyzer"
version = "1.0.0"
description = "RAG-based financial analysis tool for earnings call transcripts"
authors = ["Rajeev Radhakrishnan"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
pgvector = "^0.3.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
anthropic = "^0.40.0"
sentence-transformers = "^3.0.0"
httpx = "^0.28.0"
beautifulsoup4 = "^4.12.0"
lxml = "^5.0.0"
python-dotenv = "^1.0.0"
alembic = "^1.14.0"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
